examples/kubernetes-kustomize/overlay/dev/eturnal-certs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eturnal
  labels:
    app: eturnal
spec:
  selector:
    matchLabels:
      app: eturnal
  template:
    metadata:
      labels:
        app: eturnal
    spec:
      subdomain: eturnal
      containers:
        - name: eturnal
          volumeMounts:
          - name: eturnal-certs-modified
            mountPath: /opt/eturnal/tls
            readOnly: true
      volumes:
        - name: eturnal-certs-modified
          emptyDir:
            medium: Memory
        - name: eturnal-certs
          secret:
            secretName: nameofsecret
