examples/kubernetes-kustomize/overlay/dev/eturnal-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eturnal
  labels:
    app: eturnal
spec:
  selector:
    matchLabels:
      app: eturnal
  template:
    metadata:
      labels:
        app: eturnal
    spec:
      subdomain: eturnal
      containers:
        - name: eturnal
          volumeMounts:
          - name: eturnal-config-modified
            mountPath: /etc/eturnal.yml
            subPath: eturnal.yml
            readOnly: true
      volumes:
        - name: eturnal-config-modified
          emptyDir:
            medium: Memory
        - name: eturnal-config
          configMap:
            name: eturnal-config
